--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -37,3 +37,6 @@ custom_proxy_group=Pixiv`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP
 custom_proxy_group=PC`select`(B)
 custom_proxy_group=AD`select`[]REJECT
 custom_proxy_group=Direct`select`[]DIRECT
+
+enable_rule_generator=true
+overwrite_original_rules=true
