--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -26,9 +26,9 @@ custom_proxy_group=PROXY`select`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬
 custom_proxy_group=SELECT`select`.*
 custom_proxy_group=Final`select`[]PROXY`[]DIRECT
 custom_proxy_group=🇺🇲 Auto US`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*美.*$`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇭🇰 Auto HK`url-test`^(?!.*实验性)(?!.*\[)(?!.*B)(?!.*B).*港.*$`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇸🇬 Auto SG`url-test`^(?!.*实验性)(?!.*\[)(?!.*B)(?!.*B).*新.*$`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇯🇵 Auto JP`url-test`^(?!.*实验性)(?!.*\[)(?!.*B)(?!.*B).*日.*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇭🇰 Auto HK`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*港.*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇸🇬 Auto SG`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*新.*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇯🇵 Auto JP`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*日.*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=Apple`select`[]DIRECT`[]PROXY`[]🇺🇲 Auto US`[]SELECT
 custom_proxy_group=Google`select`[]PROXY`[]🇺🇲 Auto US`[]SELECT
 custom_proxy_group=YouTube`select`[]Google`[]PROXY`[]🇺🇲 Auto US`[]SELECT
