--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -1,10 +1,11 @@
 [custom]
 
-ruleset=PC,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/PC.list
 ruleset=AD,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=PC,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/PC.list
+ruleset=Final,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/RuTracker.list
 ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
