--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -41,7 +41,7 @@ custom_proxy_group=Microsoft`select`[]PROXY`[]🇺🇲 Auto US`[]DIRECT
 custom_proxy_group=Steam`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]DIRECT
 custom_proxy_group=Spotify`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
 custom_proxy_group=Pixiv`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP
-custom_proxy_group=PC`select`(B)
+custom_proxy_group=PC`select`(D)
 custom_proxy_group=AD`select`[]REJECT
 custom_proxy_group=Direct`select`[]DIRECT
 
