--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -1,14 +1,12 @@
 [custom]
-
-ruleset=AD,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=PC,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/PC.list
 ruleset=PROXY,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/RuTracker.list
 ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=Reddit,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.list
 ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
@@ -22,6 +20,8 @@ ruleset=Direct,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/ma
 #ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 #ruleset=Direct,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=Direct,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=PROXY,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=AD,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
 ruleset=Final,[]FINAL
 
 custom_proxy_group=PROXY`select`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
@@ -31,9 +31,11 @@ custom_proxy_group=🇺🇲 Auto US`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.
 custom_proxy_group=🇭🇰 Auto HK`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*港.*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇸🇬 Auto SG`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*新.*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇯🇵 Auto JP`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*日.*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇲 Auto-D-US`url-test`^(?!.*实验性)(?=.*美)(?=.*D).*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=Apple`select`[]DIRECT`[]PROXY`[]🇺🇲 Auto US`[]SELECT
 custom_proxy_group=Google`select`[]PROXY`[]🇺🇲 Auto US`[]SELECT
 custom_proxy_group=YouTube`select`[]Google`[]PROXY`[]🇺🇲 Auto US`[]SELECT
+custom_proxy_group=Reddit`select`[]PROXY`[]🇺🇲 Auto US`[]🇺🇲 Auto-D-US
 custom_proxy_group=Telegram`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
 custom_proxy_group=Netflix`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
 custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT`[]🇺🇸 US | 美国 01`[]🇺🇸 US | 美国 02`[]🇺🇸 US | 美国 03
@@ -42,7 +44,7 @@ custom_proxy_group=Steam`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]
 custom_proxy_group=Spotify`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
 custom_proxy_group=Pixiv`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP
 custom_proxy_group=PC`select`(D)
-custom_proxy_group=AD`select`[]REJECT
+custom_proxy_group=AD`select`[]REJECT`[]DIRECT
 custom_proxy_group=Direct`select`[]DIRECT
 
 enable_rule_generator=true
