--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -4,6 +4,7 @@ ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Lo
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=PC,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/PC.list
 ruleset=PROXY,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/RuTracker.list
+ruleset=Emby,https://raw.githubusercontent.com/autocrusher/clash-rules/main/Emby.list
 ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
@@ -39,6 +40,7 @@ custom_proxy_group=Google`select`[]PROXY`[]🇺🇲 Auto US`[]SELECT
 custom_proxy_group=YouTube`select`[]Google`[]PROXY`[]🇺🇲 Auto US`[]SELECT
 custom_proxy_group=Reddit`select`[]PROXY`[]🇺🇲 Auto US`[]🇺🇲 Auto-D-US
 custom_proxy_group=Telegram`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
+custom_proxy_group=Emby`select`[]PROXY`[]DIRECT`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
 custom_proxy_group=Netflix`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
 custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT`[]🇺🇸 US | 美国 01`[]🇺🇸 US | 美国 02`[]🇺🇸 US | 美国 03
 custom_proxy_group=Microsoft`select`[]PROXY`[]🇺🇲 Auto US`[]DIRECT
