--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -43,7 +43,8 @@ custom_proxy_group=Reddit`select`[]PROXY`[]🇺🇲 Auto US`[]🇺🇲 Auto-D-US
 custom_proxy_group=Telegram`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
 custom_proxy_group=Emby`select`[]PROXY`[]DIRECT`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
 custom_proxy_group=Netflix`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
-custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT`[]🇺🇸 US | 美国 01`[]🇺🇸 US | 美国 02`[]🇺🇸 US | 美国 03
+#custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT`[]🇺🇸 US | 美国 01`[]🇺🇸 US | 美国 02`[]🇺🇸 US | 美国 03
+custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT
 custom_proxy_group=Adobe`select`[]PROXY`[]DIRECT`[]REJECT
 custom_proxy_group=Microsoft`select`[]PROXY`[]🇺🇲 Auto US`[]DIRECT
 custom_proxy_group=Steam`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]DIRECT
