--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -2,6 +2,7 @@
 
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=Direct,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=Direct,https://raw.githubusercontent.com/autocrusher/clash-rules/main/CC98.list
 ruleset=PC,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/PC.list
 ruleset=PROXY,https://raw.githubusercontent.com/Captpricelsy/clash-rules/main/RuTracker.list
 ruleset=Emby,https://raw.githubusercontent.com/autocrusher/clash-rules/main/Emby.list
