--- a/SP_Config.ini
+++ b/SP_Config.ini
@@ -37,12 +37,16 @@ custom_proxy_group=🇺🇲 Auto-D-US`url-test`^(?!.*实验性)(?=.*美)(?=.*D).
 custom_proxy_group=🇭🇰 Auto HK`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*港.*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇸🇬 Auto SG`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*新.*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇯🇵 Auto JP`url-test`^(?!.*实验性)(?!.*\[)(?!.*D)(?!.*B).*日.*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇲 Auto ACA US`url-test`^(?=.*United States)(?=.*HA).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇭🇰 Auto ACA HK`url-test`^(?=.*Hong Kong)(?=.*HA).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇸🇬 Auto ACA SG`url-test`^(?=.*Singapore)(?=.*HA).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇯🇵 Auto ACA JP`url-test`^(?=.*Japan)(?=.*HA).*$`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=Apple`select`[]DIRECT`[]PROXY`[]🇺🇲 Auto US`[]SELECT
-custom_proxy_group=Google`select`[]PROXY`[]🇺🇲 Auto US`[]SELECT
+custom_proxy_group=Google`select`[]PROXY`[]🇺🇲 Auto US`[]SELECT`[]🇺🇲 Auto ACA US
 custom_proxy_group=YouTube`select`[]Google`[]PROXY`[]🇺🇲 Auto US`[]SELECT
-custom_proxy_group=Reddit`select`[]PROXY`[]🇺🇲 Auto US`[]🇺🇲 Auto-D-US
-custom_proxy_group=Telegram`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
-custom_proxy_group=Emby`select`[]PROXY`[]DIRECT`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP
+custom_proxy_group=Reddit`select`[]PROXY`[]🇺🇲 Auto US`[]🇺🇲 Auto-D-US`[]🇺🇲 Auto ACA US
+custom_proxy_group=Telegram`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]🇸🇬 Auto ACA SG
+custom_proxy_group=Emby`select`[]PROXY`[]DIRECT`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]🇭🇰 Auto ACA HK
 custom_proxy_group=Netflix`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
 #custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT`[]🇺🇸 US | 美国 01`[]🇺🇸 US | 美国 02`[]🇺🇸 US | 美国 03
 custom_proxy_group=OpenAI`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP`[]SELECT
@@ -51,7 +55,7 @@ custom_proxy_group=Microsoft`select`[]PROXY`[]🇺🇲 Auto US`[]DIRECT
 custom_proxy_group=Steam`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]DIRECT
 custom_proxy_group=Spotify`select`[]PROXY`[]🇺🇲 Auto US`[]🇭🇰 Auto HK`[]🇸🇬 Auto SG`[]🇯🇵 Auto JP`[]SELECT
 custom_proxy_group=Pixiv`select`[]PROXY`[]🇺🇲 Auto US`[]🇯🇵 Auto JP
-custom_proxy_group=PC`select`(D)
+custom_proxy_group=PC`select`(D|HA)
 custom_proxy_group=AD`select`[]REJECT`[]DIRECT
 custom_proxy_group=Direct`select`[]DIRECT
 
